# gb_harvest

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/: charset.aseprite  colors.aseprite  map.aseprite  player.aseprite
res/: map.c  map.h  player.c  player.h
src/: game.c  game.h  main.c
